History: UI: Toolbar button sizes Fixes OSX part of http://bugs.activestate.com/show_bug.cgi?id=81746 "History nav buttons too large" r=trentm
(integrated from komodo (trunk) change 26135 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2896 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/platform.css
+++ b/src/chrome/komodo/skin/plat/mac/platform.css
@@ -254,61 +254,19 @@ textbox[type="autocomplete"].search-box {
  * http://mxr.mozilla.org/firefox/source/browser/themes/pinstripe/browser/places/back-forward.png
  */
 
-
-toolbaritem #unifiedHistoryBackForwardDropButton {
-  list-style-image : url("chrome://komodo/skin/images/back-forward.png");
-  -moz-margin-start: 0;
-  -moz-padding-start: 0;
-}
-
-/* unified forward button with keyhole icons, small icons mode */
-toolbar #historyBackButton {
-  list-style-image : url("chrome://komodo/skin/images/back-forward.png");
-  -moz-image-region: rect(0px, 34px, 23px, 0px);
-  -moz-margin-end: 0;
-  -moz-padding-end: 0;
-  border-right: none;
-}
-
-toolbar #historyBackButton[disabled="true"] {
- -moz-image-region: rect(23px, 34px, 46px, 0px) !important;
-}
-
-toolbar #historyBackButton:hover,
-toolbar #historyBackButton[buttondown="true"],
-toolbar #historyBackButton[open="true"] {
-  -moz-image-region: rect(46px, 34px, 69px, 0px);
-}
-
-toolbar #historyForwardButton {
-  list-style-image : url("chrome://komodo/skin/images/back-forward.png");
-  -moz-image-region: rect(0px, 67px, 23px, 34px);
-  -moz-margin-start: 0;
-  -moz-margin-end: 0;
-  -moz-padding-start: 0;
-  border-left: none;
-  border-right: none;
-}
-
-toolbar #historyForwardButton[disabled="true"] {
-  -moz-image-region: rect(23px, 67px, 46px, 34px) !important;
-}
-
-toolbar #historyForwardButton:hover,
-toolbar #historyForwardButton[buttondown="true"],
-toolbar #historyForwardButton[open="true"] {
-  -moz-image-region: rect(46px, 67px, 69px, 34px);
-}
-
 toolbar #historyRecentLocations {
-  min-width: 0px;
   list-style-image : url("chrome://komodo/skin/images/firefox-Toolbar.png");
+  min-width: 12px;
+    /*
   -moz-box-orient: vertical;
   -moz-margin-start: 0;
   -moz-margin-end: 3px;
   -moz-padding-start: 0;
   -moz-padding-end: 1px;
+       */
+    /*
   border-left: none;
+       */
 }
 
 toolbar #historyRecentLocations {
